--- a/style.css
+++ b/style.css
@@ -3,15 +3,18 @@ body {
     background-color: #d2f9f9;
 }
 
-.btn_multiplayer {
-    margin-top: 100px;
-    width: 400px;
-    height: 80px;
+button {
     background: #1ab3b3;
     cursor: pointer;
     color: #fff;
     font-size: 18px;
     border: none;
+}
+
+.btn_multiplayer {
+    width: 400px;
+    height: 80px;
+    margin-top: 100px;
     margin-bottom: 10px;
     display: block;
 }
@@ -19,25 +22,13 @@ body {
 .btn_computer {
     width: 400px;
     height: 80px;
-    background: #1ab3b3;
-    cursor: pointer;
-    color: #fff;
-    font-size: 18px;
-    border: none;
-    margin-top: 10px; 
-    display: block; 
-    
+    margin-top: 10px;
+    display: block;
 }
 
 .btn_reiniciar {
-    margin-top: 20px;
     width: 200px;
     height: 40px;
-    background: #1ab3b3;
-    cursor: pointer;
-    color: #fff;
-    font-size: 18px;
-    border: none;
     margin-top: 20px;
 }
 
